<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
       android:gravity=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:padding="10dp"
            android:text="@string/registrer_view_title"
            android:textAllCaps="false"
            android:textSize="48sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrer_view_email_label_txt"
                app:boxStrokeWidthFocused="6dp"
                app:boxStrokeWidth="6dp"
                app:boxStrokeColor="@color/pure_black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrer_view_password_label_txt"
                app:boxStrokeWidthFocused="6dp"
                app:boxStrokeWidth="6dp"
                app:boxStrokeColor="@color/pure_black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:id="@+id/alias_input_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alias_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrer_view_alias_label_txt"
                app:boxStrokeColor="@color/pure_black"
                app:boxStrokeWidth="6dp"
                app:boxStrokeWidthFocused="6dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/registrer_view_btn_txt"
            app:cornerRadius="5dp"
            android:paddingVertical="10dp"
            />

        <!--<TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrer_view_email_label_txt" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrer_view_password_label_txt" />

        </com.google.android.material.textfield.TextInputLayout>-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>